Fix pages on ios / iphone x fix / button header fixZZ

--- a/src/scss/basics/_buttons.scss
+++ b/src/scss/basics/_buttons.scss
@@ -64,7 +64,7 @@
         opacity: 1;
     }
     @include media(">=0", "<=tablet") {
-        padding: .45rem 1rem;
+        padding: .7rem 1.3rem;
         font-size: .9rem;
         border-radius: 4px;
         .icon{
