--- a/src/scss/basics/_headlines.scss
+++ b/src/scss/basics/_headlines.scss
@@ -31,7 +31,7 @@ h1{
 
 h2 {
     @extend .main-title;
-    font-size: 14vw;
+    font-size: 12vw;
     line-height: .85;
     opacity: .9;
     // mix-blend-mode: overlay;
