--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -39,14 +39,6 @@
     transform: translateY(-50%);
 }
 
-.page_intro .page_content,
-.page_contact .page_content {
-    //align-self: center;
-    //top: inherit;
-}
-
-.page_contact .content__body {}
-
 .page_contact .content__body h2 {
     word-break: break-all;
     margin-bottom: 2rem;
@@ -76,12 +68,16 @@
         margin-bottom: 0;
     }
     
+    
     @include media("<=tablet") {
         background: rgba(0, 0, 0, 0.2);
         padding: 1rem;
         border-radius: 16px;
         font-size: 0.85em;
         max-width: 90vw;
+        .swiper-slide & {
+            margin-bottom: 20px;
+        }
         // box-shadow: 0px 0px 33px rgba(0, 0, 0, 0.1);
     }
 }
