--- a/src/scss/components/_swiper.scss
+++ b/src/scss/components/_swiper.scss
@@ -11,6 +11,9 @@
     // top: 260px;
     height: 16px;
     transform: translateX(-50%);
+    @include media("<=tablet") {
+        text-align: center;
+    }
 }
 
 .swiper-pagination-bullet {  
@@ -31,5 +34,9 @@
     .swiper-slide,
     .swiper-wrapper {
         width: 90vw;
+    }
+    .swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullets
+    {
+        bottom:0px;
     }
 }
